...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/FragmentContainer_MainActivity"
        android:name="com.example.capstoneprojectgroup4.front_end.StartUpFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
