<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient_authentication.Signup_EmailVerificationF">

    <Button
        android:id="@+id/email_verification_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="206dp"
        android:layout_marginBottom="162dp"
        android:background="@drawable/rectangle_4"
        android:text="Re-send email verification"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/next_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="269dp"
        android:text="Next"
        android:background="@drawable/rectangle_4"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_verification_button" />
</androidx.constraintlayout.widget.ConstraintLayout>